[gd_scene load_steps=21 format=4 uid="uid://ccj0iy0v435c0"]

[ext_resource type="Script" uid="uid://dncqkayh4at10" path="res://scenes/level_00.gd" id="1_0q21k"]
[ext_resource type="TileSet" uid="uid://c4a6e6ggu4ghm" path="res://level/tileset.tres" id="1_x33pm"]
[ext_resource type="PackedScene" uid="uid://wvqgy6grlkoq" path="res://towers/rock_tower/rock_tower.tscn" id="3_vckgy"]
[ext_resource type="PackedScene" uid="uid://bkuphfhkymf2r" path="res://level/despawner.tscn" id="5_1moou"]
[ext_resource type="PackedScene" uid="uid://btchreqwxafh3" path="res://enemy/bastard/bastard.tscn" id="5_v6vk1"]
[ext_resource type="Script" uid="uid://dglhd4hi4w5o4" path="res://scenes/deer_source.gd" id="6_1moou"]
[ext_resource type="AudioStream" uid="uid://b5flwjekndkus" path="res://sounds/yeeaaaah.ogg" id="7_id5yq"]
[ext_resource type="Script" uid="uid://dt8rupmruhb6b" path="res://scenes/selection_ui.gd" id="8_gj4e8"]
[ext_resource type="Script" uid="uid://s3kpoiau8g88" path="res://scenes/status_ui.gd" id="10_hp2ow"]
[ext_resource type="Texture2D" uid="uid://cdw0vg31pjily" path="res://fruit.png" id="11_0hcjc"]
[ext_resource type="Script" uid="uid://b3eqt8yt5yvgw" path="res://scenes/tower_build_thingy.gd" id="11_fg1lm"]
[ext_resource type="Script" uid="uid://dk5narhdu6na1" path="res://scenes/pause_ui.gd" id="11_t5218"]
[ext_resource type="AudioStream" uid="uid://canlirui8v1fx" path="res://sounds/music/base.mp3" id="13_t5218"]
[ext_resource type="AudioStream" uid="uid://dh2isyhyagd1p" path="res://sounds/music/base_rockers.mp3" id="14_7ex0a"]
[ext_resource type="AudioStream" uid="uid://sbinc8w28w25" path="res://sounds/music/base_rockers_fate.mp3" id="15_vmbub"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_1287u"]
vertices = PackedVector2Array(1567.63, 932.648, -380.547, 867.344, -331.43, -231.062, 1526.35, -242.93)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-341, -241, 1536, -253, 1578, 943, -391, 877)])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_id5yq"]
size = Vector2(65, 1122.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6vk1"]
size = Vector2(46, 1089)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1moou"]
size = Vector2(1519, 90)

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_67dfe"]
stream_count = 3
stream_0/stream = ExtResource("13_t5218")
stream_0/volume = 0.0
stream_1/stream = ExtResource("14_7ex0a")
stream_1/volume = 0.0
stream_2/stream = ExtResource("15_vmbub")
stream_2/volume = 0.0

[node name="Level00" type="Node2D"]
script = ExtResource("1_0q21k")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAQAAAAAAAEAAAAAAAIAAFAAAAIAAAABAAIAAFAAAAMAAAABAAAAAGAAAAQAAAAAAAAAAGAAAAUAAAAAAAQAAAAAAAYAAAAAAAQAAAAAAAcAAAAAAAQAAAAAAAgAAAAAAAQAAAAAAAkAAAAAAAQAAAAAAAoAAAAAAAQAAAAAAAsAAAAAAAQAAAAAAAwAAAAAAAQAAAAAAA0AAAAAAAQAAAAAAA4AAAAAAAQAAAAAAA8AAAAAAAQAAAAAABAAAAAAAAQAAAAAABEAAAAAAAQAAAAAABIAAAAAAAQAAAAAABMAAAAAAAQAAAAAABQAAAAAAAQAAAABAAAAAAAAAAQAAAABAAEAAAAAAAEAAFABAAIAAAABAAEAAFABAAMAAAABAAEAAGABAAQAAAAAAAEAAGABAAUAAAAAAAQAAAABAAYAAAAAAAQAAAABAAcAAAAAAAQAAAABAAgAAAAAAAQAAAABAAkAAAAAAAQAAAABAAoAAAAAAAQAAAABAAsAAAAAAAQAAAABAAwAAAAAAAQAAAABAA0AAAAAAAQAAAABAA4AAAAAAAQAAAABAA8AAAAAAAQAAAABABAAAAAAAAQAAAABABEAAAAAAAQAAAABABIAAAAAAAQAAAABABMAAAAAAAQAAAABABQAAAAAAAQAAAACAAAAAAAAAAQAAAACAAEAAAAAAAAAAFACAAIAAAABAAAAAFACAAMAAAABAAIAAGACAAQAAAAAAAIAAGACAAUAAAAAAAQAAAACAAYAAAAAAAQAAAACAAcAAAAAAAQAAAACAAgAAAAAAAQAAAACAAkAAAAAAAQAAAACAAoAAAAAAAQAAAACAAsAAAAAAAQAAAACAAwAAAAAAAQAAAACAA0AAAAAAAQAAAACAA4AAAAAAAQAAAACAA8AAAAAAAQAAAACABAAAAAAAAQAAAACABEAAAAAAAQAAAACABIAAAAAAAQAAAACABMAAAAAAAQAAAACABQAAAAAAAQAAAADAAAAAAAAAAQAAAADAAEAAAAAAAIAAFADAAIAAAABAAIAAFADAAMAAAABAAAAAGADAAQAAAAAAAAAAGADAAUAAAAAAAQAAAADAAYAAAAAAAQAAAADAAcAAAAAAAQAAAADAAgAAAAAAAQAAAADAAkAAAAAAAQAAAADAAoAAAAAAAQAAAADAAsAAAAAAAQAAAADAAwAAAAAAAQAAAADAA0AAAAAAAQAAAADAA4AAAAAAAQAAAADAA8AAAAAAAQAAAADABAAAAAAAAQAAAADABEAAAAAAAQAAAADABIAAAAAAAQAAAADABMAAAAAAAQAAAADABQAAAAAAAQAAAAEAAAAAAAAAAQAAAAEAAEAAAAAAAEAAFAEAAIAAAABAAEAAFAEAAMAAAABAAEAAGAEAAQAAAAAAAEAAGAEAAUAAAAAAAQAAAAEAAYAAAAAAAQAAAAEAAcAAAAAAAQAAAAEAAgAAAAAAAQAAAAEAAkAAAAAAAQAAAAEAAoAAAAAAAQAAAAEAAsAAAAAAAQAAAAEAAwAAAAAAAQAAAAEAA0AAAAAAAQAAAAEAA4AAAAAAAQAAAAEAA8AAAAAAAQAAAAEABAAAAAAAAQAAAAEABEAAAAAAAQAAAAEABIAAAAAAAQAAAAEABMAAAAAAAQAAAAEABQAAAAAAAQAAAAFAAAAAAAAAAQAAAAFAAEAAAAAAAAAAFAFAAIAAAABAAAAAFAFAAMAAAABAAIAAGAFAAQAAAAAAAIAAGAFAAUAAAAAAAQAAAAFAAYAAAAAAAQAAAAFAAcAAAAAAAQAAAAFAAgAAAAAAAQAAAAFAAkAAAAAAAQAAAAFAAoAAAAAAAQAAAAFAAsAAAAAAAQAAAAFAAwAAAAAAAQAAAAFAA0AAAAAAAQAAAAFAA4AAAAAAAQAAAAFAA8AAAAAAAQAAAAFABAAAAAAAAQAAAAFABEAAAAAAAQAAAAFABIAAAAAAAQAAAAFABMAAAAAAAQAAAAFABQAAAAAAAQAAAAGAAAAAAAAAAQAAAAGAAEAAAAAAAIAAFAGAAIAAAABAAIAAFAGAAMAAAABAAAAAGAGAAQAAAAAAAAAAGAGAAUAAAAAAAQAAAAGAAYAAAAAAAQAAAAGAAcAAAAAAAQAAAAGAAgAAAAAAAQAAAAGAAkAAAAAAAQAAAAGAAoAAAAAAAQAAAAGAAsAAAAAAAQAAAAGAAwAAAAAAAQAAAAGAA0AAAAAAAQAAAAGAA4AAAAAAAQAAAAGAA8AAAAAAAQAAAAGABAAAAAAAAQAAAAGABEAAAAAAAQAAAAGABIAAAAAAAQAAAAGABMAAAAAAAQAAAAGABQAAAAAAAQAAAAHAAAAAAAAAAQAAAAHAAEAAAAAAAEAAFAHAAIAAAABAAEAAFAHAAMAAAABAAEAAGAHAAQAAAAAAAEAAGAHAAUAAAAAAAQAAAAHAAYAAAAAAAQAAAAHAAcAAAAAAAQAAAAHAAgAAAAAAAQAAAAHAAkAAAAAAAQAAAAHAAoAAAAAAAQAAAAHAAsAAAAAAAQAAAAHAAwAAAAAAAQAAAAHAA0AAAAAAAQAAAAHAA4AAAAAAAQAAAAHAA8AAAAAAAQAAAAHABAAAAAAAAQAAAAHABEAAAAAAAQAAAAHABIAAAAAAAQAAAAHABMAAAAAAAQAAAAHABQAAAAAAAQAAAAIAAAAAAAAAAQAAAAIAAEAAAAAAAAAAFAIAAIAAAABAAAAAFAIAAMAAAABAAIAAGAIAAQAAAAAAAIAAGAIAAUAAAAAAAQAAAAIAAYAAAAAAAQAAAAIAAcAAAAAAAQAAAAIAAgAAAAAAAQAAAAIAAkAAAAAAAQAAAAIAAoAAAAAAAQAAAAIAAsAAAAAAAQAAAAIAAwAAAAAAAQAAAAIAA0AAAAAAAQAAAAIAA4AAAAAAAQAAAAIAA8AAAAAAAQAAAAIABAAAAAAAAQAAAAIABEAAAAAAAQAAAAIABIAAAAAAAQAAAAIABMAAAAAAAQAAAAIABQAAAAAAAQAAAAJAAAAAAAAAAQAAAAJAAEAAAAAAAEAAFAJAAIAAAABAAEAAFAJAAMAAAABAAIAAFAJAAQAAAABAAIAAFAJAAUAAAABAAAAAGAJAAYAAAAAAAAAAGAJAAcAAAAAAAQAAAAJAAgAAAAAAAQAAAAJAAkAAAAAAAQAAAAJAAoAAAAAAAQAAAAJAAsAAAAAAAQAAAAJAAwAAAAAAAQAAAAJAA0AAAAAAAQAAAAJAA4AAAAAAAQAAAAJAA8AAAAAAAQAAAAJABAAAAAAAAQAAAAJABEAAAAAAAQAAAAJABIAAAAAAAQAAAAJABMAAAAAAAQAAAAJABQAAAAAAAQAAAAKAAAAAAAAAAQAAAAKAAEAAAAAAAAAAFAKAAIAAAABAAAAAFAKAAMAAAABAAEAAFAKAAQAAAABAAEAAFAKAAUAAAABAAEAAGAKAAYAAAAAAAEAAGAKAAcAAAAAAAQAAAAKAAgAAAAAAAQAAAAKAAkAAAAAAAQAAAAKAAoAAAAAAAQAAAAKAAsAAAAAAAQAAAAKAAwAAAAAAAQAAAAKAA0AAAAAAAQAAAAKAA4AAAAAAAQAAAAKAA8AAAAAAAQAAAAKABAAAAAAAAQAAAAKABEAAAAAAAQAAAAKABIAAAAAAAQAAAAKABMAAAAAAAQAAAAKABQAAAAAAAQAAAALAAAAAAAAAAQAAAALAAEAAAAAAAIAAFALAAIAAAABAAIAAFALAAMAAAABAAAAAFALAAQAAAABAAAAAFALAAUAAAABAAIAAGALAAYAAAAAAAIAAGALAAcAAAAAAAQAAAALAAgAAAAAAAQAAAALAAkAAAAAAAQAAAALAAoAAAAAAAQAAAALAAsAAAAAAAQAAAALAAwAAAAAAAQAAAALAA0AAAAAAAQAAAALAA4AAAAAAAQAAAALAA8AAAAAAAQAAAALABAAAAAAAAQAAAALABEAAAAAAAQAAAALABIAAAAAAAQAAAALABMAAAAAAAQAAAALABQAAAAAAAQAAAAMAAAAAAAAAAQAAAAMAAEAAAAAAAEAAFAMAAIAAAABAAEAAFAMAAMAAAABAAIAAFAMAAQAAAABAAIAAFAMAAUAAAABAAAAAGAMAAYAAAAAAAAAAGAMAAcAAAAAAAQAAAAMAAgAAAAAAAQAAAAMAAkAAAAAAAQAAAAMAAoAAAAAAAQAAAAMAAsAAAAAAAQAAAAMAAwAAAAAAAQAAAAMAA0AAAAAAAQAAAAMAA4AAAAAAAQAAAAMAA8AAAAAAAQAAAAMABAAAAAAAAQAAAAMABEAAAAAAAQAAAAMABIAAAAAAAQAAAAMABMAAAAAAAQAAAAMABQAAAAAAAQAAAANAAAAAAAAAAQAAAANAAEAAAAAAAAAAFANAAIAAAABAAAAAFANAAMAAAABAAEAAFANAAQAAAABAAEAAFANAAUAAAABAAEAAGANAAYAAAAAAAEAAGANAAcAAAAAAAQAAAANAAgAAAAAAAQAAAANAAkAAAAAAAQAAAANAAoAAAAAAAQAAAANAAsAAAAAAAQAAAANAAwAAAAAAAQAAAANAA0AAAAAAAQAAAANAA4AAAAAAAQAAAANAA8AAAAAAAQAAAANABAAAAAAAAQAAAANABEAAAAAAAQAAAANABIAAAAAAAQAAAANABMAAAAAAAQAAAANABQAAAAAAAQAAAAOAAAAAAAAAAQAAAAOAAEAAAAAAAIAAFAOAAIAAAABAAIAAFAOAAMAAAABAAAAAFAOAAQAAAABAAAAAFAOAAUAAAABAAIAAGAOAAYAAAAAAAIAAGAOAAcAAAAAAAQAAAAOAAgAAAAAAAQAAAAOAAkAAAAAAAQAAAAOAAoAAAAAAAQAAAAOAAsAAAAAAAQAAAAOAAwAAAAAAAQAAAAOAA0AAAAAAAQAAAAOAA4AAAAAAAQAAAAOAA8AAAAAAAQAAAAOABAAAAAAAAQAAAAOABEAAAAAAAQAAAAOABIAAAAAAAQAAAAOABMAAAAAAAQAAAAOABQAAAAAAAQAAAAPAAAAAAAAAAQAAAAPAAEAAAAAAAEAAFAPAAIAAAABAAEAAFAPAAMAAAABAAIAAFAPAAQAAAABAAIAAFAPAAUAAAABAAAAAGAPAAYAAAAAAAAAAGAPAAcAAAAAAAQAAAAPAAgAAAAAAAQAAAAPAAkAAAAAAAQAAAAPAAoAAAAAAAQAAAAPAAsAAAAAAAQAAAAPAAwAAAAAAAQAAAAPAA0AAAAAAAQAAAAPAA4AAAAAAAQAAAAPAA8AAAAAAAQAAAAPABAAAAAAAAQAAAAPABEAAAAAAAQAAAAPABIAAAAAAAQAAAAPABMAAAAAAAQAAAAPABQAAAAAAAQAAAAQAAAAAAAAAAQAAAAQAAEAAAAAAAIAAFAQAAIAAAABAAIAAFAQAAMAAAABAAEAAFAQAAQAAAABAAEAAFAQAAUAAAABAAEAAGAQAAYAAAAAAAEAAGAQAAcAAAAAAAQAAAAQAAgAAAAAAAQAAAAQAAkAAAAAAAQAAAAQAAoAAAAAAAQAAAAQAAsAAAAAAAQAAAAQAAwAAAAAAAQAAAAQAA0AAAAAAAQAAAAQAA4AAAAAAAQAAAAQAA8AAAAAAAQAAAAQABAAAAAAAAQAAAAQABEAAAAAAAQAAAAQABIAAAAAAAQAAAAQABMAAAAAAAQAAAAQABQAAAAAAAQAAAARAAAAAAAAAAQAAAARAAEAAAAAAAEAAFARAAIAAAABAAEAAFARAAMAAAABAAAAAFARAAQAAAABAAAAAFARAAUAAAABAAIAAGARAAYAAAAAAAIAAGARAAcAAAAAAAQAAAARAAgAAAAAAAQAAAARAAkAAAAAAAQAAAARAAoAAAAAAAQAAAARAAsAAAAAAAQAAAARAAwAAAAAAAQAAAARAA0AAAAAAAQAAAARAA4AAAAAAAQAAAARAA8AAAAAAAQAAAARABAAAAAAAAQAAAARABEAAAAAAAQAAAARABIAAAAAAAQAAAARABMAAAAAAAQAAAARABQAAAAAAAQAAAASAAAAAAAAAAQAAAASAAEAAAAAAAAAAFASAAIAAAABAAAAAFASAAMAAAABAAAAAGASAAQAAAAAAAAAAGASAAUAAAAAAAQAAAASAAYAAAAAAAQAAAASAAcAAAAAAAQAAAASAAgAAAAAAAQAAAASAAkAAAAAAAQAAAASAAoAAAAAAAQAAAASAAsAAAAAAAQAAAASAAwAAAAAAAQAAAASAA0AAAAAAAQAAAASAA4AAAAAAAQAAAASAA8AAAAAAAQAAAASABAAAAAAAAQAAAASABEAAAAAAAQAAAASABIAAAAAAAQAAAASABMAAAAAAAQAAAASABQAAAAAAAQAAAATAAAAAAAAAAQAAAATAAEAAAAAAAEAAFATAAIAAAABAAEAAFATAAMAAAABAAEAAGATAAQAAAAAAAEAAGATAAUAAAAAAAQAAAATAAYAAAAAAAQAAAATAAcAAAAAAAQAAAATAAgAAAAAAAQAAAATAAkAAAAAAAQAAAATAAoAAAAAAAQAAAATAAsAAAAAAAQAAAATAAwAAAAAAAQAAAATAA0AAAAAAAQAAAATAA4AAAAAAAQAAAATAA8AAAAAAAQAAAATABAAAAAAAAQAAAATABEAAAAAAAQAAAATABIAAAAAAAQAAAATABMAAAAAAAQAAAATABQAAAAAAAQAAAAUAAAAAAAAAAQAAAAUAAEAAAAAAAAAAFAUAAIAAAABAAAAAFAUAAMAAAABAAIAAGAUAAQAAAAAAAIAAGAUAAUAAAAAAAQAAAAUAAYAAAAAAAQAAAAUAAcAAAAAAAQAAAAUAAgAAAAAAAQAAAAUAAkAAAAAAAQAAAAUAAoAAAAAAAQAAAAUAAsAAAAAAAQAAAAUAAwAAAAAAAQAAAAUAA0AAAAAAAQAAAAUAA4AAAAAAAQAAAAUAA8AAAAAAAQAAAAUABAAAAAAAAQAAAAUABEAAAAAAAQAAAAUABIAAAAAAAQAAAAUABMAAAAAAAQAAAAUABQAAAAAAAQAAAAVAAAAAAAAAAQAAAAVAAEAAAAAAAQAAAAVAAIAAAABAAIAAFAVAAMAAAABAAAAAGAVAAQAAAAAAAAAAGAVAAUAAAAAAAQAAAAVAAYAAAAAAAQAAAAVAAcAAAAAAAQAAAAVAAgAAAAAAAQAAAAVAAkAAAAAAAQAAAAVAAoAAAAAAAQAAAAVAAsAAAAAAAQAAAAVAAwAAAAAAAQAAAAVAA0AAAAAAAQAAAAVAA4AAAAAAAQAAAAVAA8AAAAAAAQAAAAVABAAAAAAAAQAAAAVABEAAAAAAAQAAAAVABIAAAAAAAQAAAAVABMAAAAAAAQAAAAVABQAAAAAAAQAAAAWAAAAAAAAAAQAAAAWAAEAAAAAAAIAAFAWAAIAAAABAAEAAFAWAAMAAAABAAEAAGAWAAQAAAAAAAEAAGAWAAUAAAAAAAQAAAAWAAYAAAAAAAQAAAAWAAcAAAAAAAQAAAAWAAgAAAAAAAQAAAAWAAkAAAAAAAQAAAAWAAoAAAAAAAQAAAAWAAsAAAAAAAQAAAAWAAwAAAAAAAQAAAAWAA0AAAAAAAQAAAAWAA4AAAAAAAQAAAAWAA8AAAAAAAQAAAAWABAAAAAAAAQAAAAWABEAAAAAAAQAAAAWABIAAAAAAAQAAAAWABMAAAAAAAQAAAAWABQAAAAAAAQAAAAXAAAAAAAAAAQAAAAXAAEAAAAAAAEAAFAXAAIAAAABAAAAAFAXAAMAAAABAAIAAGAXAAQAAAABAAIAAFAXAAUAAAAAAAMAAAAXAAYAAAAAAAQAAAAXAAcAAAAAAAQAAAAXAAgAAAAAAAQAAAAXAAkAAAAAAAQAAAAXAAoAAAAAAAAAAAAXAAsAAAAAAAEAAAAXAAwAAAAAAAIAAAAXAA0AAAAAAAMAAAAXAA4AAAAAAAQAAAAXAA8AAAAAAAQAAAAXABAAAAAAAAQAAAAXABEAAAAAAAQAAAAXABIAAAAAAAQAAAAXABMAAAAAAAQAAAAXABQAAAAAAAQAAAAYAAAAAAAAAAQAAAAYAAEAAAAAAAAAAFAYAAIAAAABAAAAAFAYAAMAAAABAAIAAAAYAAQAAAABAAEAAAAYAAUAAAABAAIAAAAYAAYAAAAAAAAAAAAYAAcAAAAAAAAAAAAYAAgAAAAAAAEAAAAYAAkAAAAAAAIAAAAYAAoAAAABAAAAAAAYAAsAAAABAAEAAAAYAAwAAAABAAIAAAAYAA0AAAABAAIAAFAYAA4AAAABAAAAAGAYAA8AAAAAAAAAAGAYABAAAAAAAAQAAAAYABEAAAAAAAQAAAAYABIAAAAAAAQAAAAYABMAAAAAAAQAAAAYABQAAAAAAAQAAAAZAAAAAAAAAAQAAAAZAAEAAAAAAAMAADAZAAIAAAABAAEAAAAZAAMAAAABAAEAAAAZAAQAAAABAAIAAAAZAAUAAAABAAIAAAAZAAYAAAABAAAAAAAZAAcAAAABAAEAAAAZAAgAAAABAAIAAAAZAAkAAAABAAAAAAAZAAoAAAABAAEAAAAZAAsAAAABAAAAAAAZAAwAAAABAAEAAAAZAA0AAAABAAEAAFAZAA4AAAABAAEAAGAZAA8AAAAAAAEAAGAZABAAAAAAAAQAAAAZABEAAAAAAAQAAAAZABIAAAAAAAQAAAAZABMAAAAAAAQAAAAZABQAAAAAAAQAAAAaAAAAAAAAAAQAAAAaAAEAAAAAAAQAAAAaAAIAAAAAAAMAADAaAAMAAAAAAAIAADAaAAQAAAAAAAEAADAaAAUAAAAAAAAAADAaAAYAAAAAAAIAADAaAAcAAAAAAAEAADAaAAgAAAAAAAAAADAaAAkAAAAAAAIAADAaAAoAAAAAAAEAADAaAAsAAAAAAAAAADAaAAwAAAAAAAMAADAaAA0AAAABAAAAAFAaAA4AAAABAAIAAGAaAA8AAAAAAAIAAGAaABAAAAAAAAQAAAAaABEAAAAAAAQAAAAaABIAAAAAAAQAAAAaABMAAAAAAAQAAAAaABQAAAAAAAQAAAAbAAAAAAAAAAQAAAAbAAEAAAAAAAQAAAAbAAIAAAAAAAQAAAAbAAMAAAAAAAQAAAAbAAQAAAAAAAQAAAAbAAUAAAAAAAQAAAAbAAYAAAAAAAQAAAAbAAcAAAAAAAQAAAAbAAgAAAAAAAQAAAAbAAkAAAAAAAQAAAAbAAoAAAAAAAQAAAAbAAsAAAAAAAQAAAAbAAwAAAAAAAQAAAAbAA0AAAAAAAIAAFAbAA4AAAABAAIAAFAbAA8AAAABAAIAAFAbABAAAAABAAAAAGAbABEAAAAAAAAAAGAbABIAAAAAAAQAAAAbABMAAAAAAAQAAAAbABQAAAAAAAQAAAAcAAAAAAAAAAQAAAAcAAEAAAAAAAQAAAAcAAIAAAAAAAQAAAAcAAMAAAAAAAQAAAAcAAQAAAAAAAQAAAAcAAUAAAAAAAQAAAAcAAYAAAAAAAQAAAAcAAcAAAAAAAQAAAAcAAgAAAAAAAQAAAAcAAkAAAAAAAQAAAAcAAoAAAAAAAQAAAAcAAsAAAAAAAQAAAAcAAwAAAAAAAQAAAAcAA0AAAAAAAEAAFAcAA4AAAABAAEAAFAcAA8AAAABAAEAAFAcABAAAAABAAEAAGAcABEAAAAAAAEAAGAcABIAAAAAAAQAAAAcABMAAAAAAAQAAAAcABQAAAAAAAQAAAAdAAAAAAAAAAQAAAAdAAEAAAAAAAQAAAAdAAIAAAAAAAQAAAAdAAMAAAAAAAQAAAAdAAQAAAAAAAQAAAAdAAUAAAAAAAQAAAAdAAYAAAAAAAQAAAAdAAcAAAAAAAQAAAAdAAgAAAAAAAQAAAAdAAkAAAAAAAQAAAAdAAoAAAAAAAQAAAAdAAsAAAAAAAQAAAAdAAwAAAAAAAQAAAAdAA0AAAAAAAAAAFAdAA4AAAABAAAAAFAdAA8AAAABAAAAAFAdABAAAAABAAIAAGAdABEAAAAAAAIAAGAdABIAAAAAAAQAAAAdABMAAAAAAAQAAAAdABQAAAAAAAQAAAAeAAAAAAAAAAQAAAAeAAEAAAAAAAQAAAAeAAIAAAAAAAQAAAAeAAMAAAAAAAQAAAAeAAQAAAAAAAQAAAAeAAUAAAAAAAQAAAAeAAYAAAAAAAQAAAAeAAcAAAAAAAQAAAAeAAgAAAAAAAQAAAAeAAkAAAAAAAQAAAAeAAoAAAAAAAQAAAAeAAsAAAAAAAQAAAAeAAwAAAAAAAQAAAAeAA0AAAAAAAQAAAAeAA4AAAAAAAIAAFAeAA8AAAABAAIAAFAeABAAAAABAAEAAGAeABEAAAAAAAEAAGAeABIAAAAAAAQAAAAeABMAAAAAAAQAAAAeABQAAAAAAAQAAAAfAAAAAAAAAAQAAAAfAAEAAAAAAAQAAAAfAAIAAAAAAAQAAAAfAAMAAAAAAAQAAAAfAAQAAAAAAAQAAAAfAAUAAAAAAAQAAAAfAAYAAAAAAAQAAAAfAAcAAAAAAAQAAAAfAAgAAAAAAAQAAAAfAAkAAAAAAAQAAAAfAAoAAAAAAAQAAAAfAAsAAAAAAAQAAAAfAAwAAAAAAAQAAAAfAA0AAAAAAAQAAAAfAA4AAAAAAAEAAFAfAA8AAAABAAEAAFAfABAAAAABAAIAAGAfABEAAAAAAAIAAGAfABIAAAAAAAQAAAAfABMAAAAAAAQAAAAfABQAAAAAAAQAAAAgAAAAAAAAAAQAAAAgAAEAAAAAAAQAAAAgAAIAAAAAAAQAAAAgAAMAAAAAAAQAAAAgAAQAAAAAAAQAAAAgAAUAAAAAAAQAAAAgAAYAAAAAAAQAAAAgAAcAAAAAAAQAAAAgAAgAAAAAAAQAAAAgAAkAAAAAAAQAAAAgAAoAAAAAAAQAAAAgAAsAAAAAAAQAAAAgAAwAAAAAAAQAAAAgAA0AAAAAAAQAAAAgAA4AAAAAAAAAAFAgAA8AAAABAAIAAFAgABAAAAAAAAAAAGAgABEAAAAAAAQAAAAgABIAAAAAAAQAAAAgABMAAAAAAAQAAAAgABQAAAAAAAQAAAAhAAAAAAAAAAQAAAAhAAEAAAAAAAQAAAAhAAIAAAAAAAQAAAAhAAMAAAAAAAQAAAAhAAQAAAAAAAQAAAAhAAUAAAAAAAQAAAAhAAYAAAAAAAQAAAAhAAcAAAAAAAQAAAAhAAgAAAAAAAQAAAAhAAkAAAAAAAQAAAAhAAoAAAAAAAQAAAAhAAsAAAAAAAQAAAAhAAwAAAAAAAQAAAAhAA0AAAAAAAQAAAAhAA4AAAAAAAIAAFAhAA8AAAABAAEAAFAhABAAAAAAAAEAAGAhABEAAAAAAAQAAAAhABIAAAAAAAQAAAAhABMAAAAAAAQAAAAhABQAAAAAAAQAAAAiAAAAAAAAAAQAAAAiAAEAAAAAAAQAAAAiAAIAAAAAAAQAAAAiAAMAAAAAAAQAAAAiAAQAAAAAAAQAAAAiAAUAAAAAAAQAAAAiAAYAAAAAAAQAAAAiAAcAAAAAAAQAAAAiAAgAAAAAAAQAAAAiAAkAAAAAAAQAAAAiAAoAAAAAAAQAAAAiAAsAAAAAAAQAAAAiAAwAAAAAAAQAAAAiAA0AAAAAAAQAAAAiAA4AAAAAAAEAAFAiAA8AAAABAAIAAFAiABAAAAAAAAIAAGAiABEAAAAAAAQAAAAiABIAAAAAAAQAAAAiABMAAAAAAAQAAAAiABQAAAAAAAQAAAAjAAAAAAAAAAQAAAAjAAEAAAAAAAQAAAAjAAIAAAAAAAQAAAAjAAMAAAAAAAQAAAAjAAQAAAAAAAQAAAAjAAUAAAAAAAQAAAAjAAYAAAAAAAQAAAAjAAcAAAAAAAQAAAAjAAgAAAAAAAQAAAAjAAkAAAAAAAQAAAAjAAoAAAAAAAQAAAAjAAsAAAAAAAQAAAAjAAwAAAAAAAQAAAAjAA0AAAAAAAQAAAAjAA4AAAAAAAAAAFAjAA8AAAABAAEAAFAjABAAAAABAAEAAFAjABEAAAAAAAQAAAAjABIAAAAAAAQAAAAjABMAAAAAAAQAAAAjABQAAAAAAAQAAAAkAAAAAAAAAAQAAAAkAAEAAAAAAAQAAAAkAAIAAAAAAAQAAAAkAAMAAAAAAAQAAAAkAAQAAAAAAAQAAAAkAAUAAAAAAAQAAAAkAAYAAAAAAAQAAAAkAAcAAAAAAAQAAAAkAAgAAAAAAAQAAAAkAAkAAAAAAAQAAAAkAAoAAAAAAAQAAAAkAAsAAAAAAAQAAAAkAAwAAAAAAAQAAAAkAA0AAAAAAAQAAAAkAA4AAAAAAAQAAAAkAA8AAAABAAAAAFAkABAAAAABAAAAAFAkABEAAAAAAAQAAAAkABIAAAAAAAQAAAAkABMAAAAAAAQAAAAkABQAAAAAAAQAAAD//wAAAAADAAIAAAD//wEAAAADAAIAAAD//wIAAAADAAIAAAD//wMAAAADAAIAAAD+/wMAAAADAAIAAAD+/wQAAAADAAIAAAD9/wQAAAADAAIAAAD9/wMAAAADAAIAAAD8/wIAAAADAAIAAAD8/wEAAAADAAIAAAD8/wAAAAADAAIAAAD9/wAAAAADAAIAAAD+/wAAAAADAAIAAAD+/wEAAAADAAIAAAD+/wIAAAADAAIAAAD9/wIAAAADAAIAAAD9/wEAAAADAAIAAAD8/wMAAAADAAIAAAD8/wQAAAADAAIAAAD//wQAAAADAAIAAAAlABAAAAABAAIAAFAmABAAAAABAAEAAFAnABAAAAABAAIAAFAoABAAAAABAAEAAFAoAA8AAAABAAEAAFApAA8AAAABAAIAAFAnAA8AAAABAAIAAFAmAA8AAAABAAEAAFAlAA8AAAABAAIAAFApABAAAAABAAIAAFArAA8AAAABAAAAAFAqAA8AAAABAAEAAFArABAAAAABAAAAAFAqABAAAAABAAEAAFAlAA4AAAAAAAQAAAAlAA0AAAAAAAQAAAAlAAwAAAAAAAQAAAAlAAsAAAAAAAQAAAAlAAoAAAAAAAQAAAAmAAoAAAAAAAQAAAAmAAkAAAAAAAQAAAAmAAgAAAAAAAQAAAAmAAcAAAAAAAQAAAAmAAYAAAAAAAQAAAAmAAUAAAAAAAQAAAAmAAQAAAAAAAQAAAAmAAMAAAAAAAQAAAAmAAIAAAAAAAQAAAAmAAEAAAAAAAQAAAAlAAEAAAAAAAQAAAAlAAAAAAAAAAQAAAAlAAIAAAAAAAQAAAAlAAMAAAAAAAQAAAAlAAQAAAAAAAQAAAAlAAUAAAAAAAQAAAAlAAYAAAAAAAQAAAAlAAcAAAAAAAQAAAAlAAgAAAAAAAQAAAAlAAkAAAAAAAQAAAAmAAsAAAAAAAQAAAAmAAwAAAAAAAQAAAAmAA0AAAAAAAQAAAAmAA4AAAAAAAQAAAAnAA4AAAAAAAQAAAAoAA4AAAAAAAQAAAAoAA0AAAAAAAQAAAAoAAwAAAAAAAQAAAAoAAsAAAAAAAQAAAAoAAoAAAAAAAQAAAAoAAkAAAAAAAQAAAAoAAgAAAAAAAQAAAAoAAcAAAAAAAQAAAAoAAYAAAAAAAQAAAAoAAUAAAAAAAQAAAAoAAQAAAAAAAQAAAAoAAMAAAAAAAQAAAAoAAIAAAAAAAQAAAAoAAEAAAAAAAQAAAAoAAAAAAAAAAQAAAAnAAAAAAAAAAQAAAAmAAAAAAAAAAQAAAAnAAEAAAAAAAQAAAAnAAIAAAAAAAQAAAAnAAMAAAAAAAQAAAAnAAQAAAAAAAQAAAAnAAUAAAAAAAQAAAAnAAYAAAAAAAQAAAAnAAcAAAAAAAQAAAAnAAgAAAAAAAQAAAAnAAkAAAAAAAQAAAAnAAoAAAAAAAQAAAAnAAsAAAAAAAQAAAAnAAwAAAAAAAQAAAAnAA0AAAAAAAQAAAApAA4AAAAAAAQAAAApAA0AAAAAAAQAAAApAAwAAAAAAAQAAAApAAsAAAAAAAQAAAApAAoAAAAAAAQAAAApAAkAAAAAAAQAAAAqAAgAAAAAAAQAAAAqAAcAAAAAAAQAAAAqAAYAAAAAAAQAAAAqAAUAAAAAAAQAAAAqAAQAAAAAAAQAAAAqAAMAAAAAAAQAAAAqAAIAAAAAAAQAAAAqAAEAAAAAAAQAAAApAAEAAAAAAAQAAAApAAAAAAAAAAQAAAApAAIAAAAAAAQAAAApAAMAAAAAAAQAAAApAAQAAAAAAAQAAAApAAUAAAAAAAQAAAApAAYAAAAAAAQAAAApAAcAAAAAAAQAAAApAAgAAAAAAAQAAAApABEAAAAAAAQAAAAoABEAAAAAAAQAAAAnABEAAAAAAAQAAAAmABEAAAAAAAQAAAAlABEAAAAAAAQAAAAlABIAAAAAAAQAAAAmABIAAAAAAAQAAAAnABIAAAAAAAQAAAAoABIAAAAAAAQAAAApABIAAAAAAAQAAAAoABMAAAAAAAQAAAAnABMAAAAAAAQAAAAnABQAAAAAAAQAAAAmABQAAAAAAAQAAAAlABQAAAAAAAQAAAAlABMAAAAAAAQAAAAmABMAAAAAAAQAAAApABMAAAAAAAQAAAApABQAAAAAAAQAAAAoABQAAAAAAAQAAAAoABUAAAAAAAQAAAAnABUAAAAAAAQAAAAnABYAAAAAAAQAAAAoABYAAAAAAAQAAAApABYAAAAAAAQAAAApABUAAAAAAAQAAAAmABUAAAAAAAQAAAAlABUAAAAAAAQAAAAkABUAAAAAAAQAAAAjABUAAAAAAAQAAAAiABUAAAAAAAQAAAAhABUAAAAAAAQAAAAgABUAAAAAAAQAAAAfABUAAAAAAAQAAAAeABUAAAAAAAQAAAAmABYAAAAAAAQAAAAlABYAAAAAAAQAAAAkABYAAAAAAAQAAAAjABYAAAAAAAQAAAAiABYAAAAAAAQAAAAhABYAAAAAAAQAAAAgABYAAAAAAAQAAAAfABYAAAAAAAQAAAAeABYAAAAAAAQAAAAdABYAAAAAAAQAAAAcABYAAAAAAAQAAAAbABYAAAAAAAQAAAAaABYAAAAAAAQAAAAZABYAAAAAAAQAAAAYABYAAAAAAAQAAAAXABYAAAAAAAQAAAAWABYAAAAAAAQAAAAVABYAAAAAAAQAAAAUABYAAAAAAAQAAAATABYAAAAAAAQAAAASABYAAAAAAAQAAAARABYAAAAAAAQAAAAQABYAAAAAAAQAAAAPABYAAAAAAAQAAAAOABYAAAAAAAQAAAANABYAAAAAAAQAAAAMABYAAAAAAAQAAAALABYAAAAAAAQAAAAKABUAAAAAAAQAAAAJABUAAAAAAAQAAAAIABUAAAAAAAQAAAAHABUAAAAAAAQAAAAGABUAAAAAAAQAAAAFABUAAAAAAAQAAAAEABUAAAAAAAQAAAADABUAAAAAAAQAAAACABUAAAAAAAQAAAABABUAAAAAAAQAAAABABYAAAAAAAQAAAAAABYAAAAAAAQAAAAAABUAAAAAAAQAAAACABYAAAAAAAQAAAADABYAAAAAAAQAAAAEABYAAAAAAAQAAAAFABYAAAAAAAQAAAAGABYAAAAAAAQAAAAHABYAAAAAAAQAAAAIABYAAAAAAAQAAAAJABYAAAAAAAQAAAAKABYAAAAAAAQAAAAWABUAAAAAAAQAAAAXABUAAAAAAAQAAAAYABUAAAAAAAQAAAAZABUAAAAAAAQAAAAaABUAAAAAAAQAAAAbABUAAAAAAAQAAAAcABUAAAAAAAQAAAAdABUAAAAAAAQAAAAVABUAAAAAAAQAAAAUABUAAAAAAAQAAAATABUAAAAAAAQAAAASABUAAAAAAAQAAAARABUAAAAAAAQAAAALABUAAAAAAAQAAAAMABUAAAAAAAQAAAANABUAAAAAAAQAAAAOABUAAAAAAAQAAAAPABUAAAAAAAQAAAAQABUAAAAAAAQAAAA=")
tile_set = ExtResource("1_x33pm")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
visible = false
navigation_polygon = SubResource("NavigationPolygon_1287u")
navigation_layers = 2

[node name="GoalDespawner" parent="." instance=ExtResource("5_1moou")]
position = Vector2(1254, 357)
group = "deer"

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalDespawner"]
position = Vector2(102, 51.75)
shape = SubResource("RectangleShape2D_id5yq")

[node name="EdgeDespawner" parent="." instance=ExtResource("5_1moou")]
position = Vector2(1320, 343)
group = "deer"

[node name="CollisionShape2D" type="CollisionShape2D" parent="EdgeDespawner"]
position = Vector2(-1452, 62.5)
shape = SubResource("RectangleShape2D_v6vk1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="EdgeDespawner"]
position = Vector2(-688, -501)
shape = SubResource("RectangleShape2D_1moou")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="EdgeDespawner"]
position = Vector2(-719, 570)
shape = SubResource("RectangleShape2D_1moou")

[node name="DeerTarget" type="Node2D" parent="."]
position = Vector2(1399, 512)

[node name="DeerSource" type="Node2D" parent="." node_paths=PackedStringArray("target")]
position = Vector2(-54, 80)
script = ExtResource("6_1moou")
target = NodePath("../DeerTarget")
Deer = ExtResource("5_v6vk1")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DeerSource"]
stream = ExtResource("7_id5yq")

[node name="RockTower3" parent="." instance=ExtResource("3_vckgy")]
position = Vector2(727, 196)
throw_period = 4.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SelectionUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_gj4e8")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/SelectionUI"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1047.0
offset_right = 1240.0
offset_bottom = 679.0
grow_horizontal = 0
grow_vertical = 2
metadata/_edit_group_ = true

[node name="TowerNameLabel" type="RichTextLabel" parent="CanvasLayer/SelectionUI/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Tower Name [i]italic[/i]"
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/SelectionUI/VBoxContainer"]
layout_mode = 2

[node name="TowerDescLabel" type="RichTextLabel" parent="CanvasLayer/SelectionUI/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "A descriptive description."
fit_content = true

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/SelectionUI/VBoxContainer"]
layout_mode = 2

[node name="UpgradesLabel" type="Label" parent="CanvasLayer/SelectionUI/VBoxContainer"]
layout_mode = 2
text = "Upgrades:"

[node name="ItemList" type="ItemList" parent="CanvasLayer/SelectionUI/VBoxContainer"]
layout_mode = 2
auto_width = true
auto_height = true
item_count = 1
item_0/text = "100 Some Tower"

[node name="StatusUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
script = ExtResource("10_hp2ow")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/StatusUI"]
layout_mode = 0
offset_left = 35.0
offset_top = -50.0
offset_right = 156.0
metadata/_edit_group_ = true

[node name="MoneyLabel" type="Label" parent="CanvasLayer/StatusUI/VBoxContainer"]
layout_mode = 2
text = "Moneys: 8"

[node name="TomatoCountLabel" type="Label" parent="CanvasLayer/StatusUI/VBoxContainer"]
layout_mode = 2
text = "Tomatoes: 42"

[node name="WaveProgressLabel" type="Label" parent="CanvasLayer/StatusUI/VBoxContainer"]
layout_mode = 2
text = "Wave 42 - 13/12"

[node name="WinnerUI" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/WinnerUI"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/WinnerUI/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/WinnerUI/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/WinnerUI/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("11_0hcjc")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/WinnerUI/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Your tomatoes are safe! 
At least until tomorrow..."
fit_content = true
autowrap_mode = 0

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/WinnerUI/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("11_0hcjc")

[node name="AgainButton" type="Button" parent="CanvasLayer/WinnerUI/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "-= go to sleep =-"

[node name="HarvestButton" type="Button" parent="CanvasLayer/WinnerUI/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "-= harvest! =-"

[node name="LossUI" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/LossUI"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/LossUI/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/LossUI/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/LossUI/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("11_0hcjc")
flip_v = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/LossUI/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Well that didn't go too well.
Better luck net year I guess..."
fit_content = true
autowrap_mode = 0

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/LossUI/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("11_0hcjc")
flip_v = true

[node name="AgainButton" type="Button" parent="CanvasLayer/LossUI/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "-= be sad for a year =-"

[node name="PauseUI" type="Control" parent="CanvasLayer"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("11_t5218")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/PauseUI"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseUI/CenterContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/PauseUI/CenterContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Puse menu pause manu pause manu pause manu menuuuuuue"
fit_content = true
autowrap_mode = 0

[node name="ResumeButton" type="Button" parent="CanvasLayer/PauseUI/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "-= No they can't have my godsdamned tomatoes those =-
are MINE they are MINE FOR ME MY TOMATOES THEY ARE MINE
I WILL PUT THEM IN SANDWISCHES I HAVE BEEN WAITIGN ALL YEAR"

[node name="QuitButton" type="Button" parent="CanvasLayer/PauseUI/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "-= nah screw this =-"

[node name="TowerBuildThingy" type="Node2D" parent="."]
script = ExtResource("11_fg1lm")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamSynchronized_67dfe")
autoplay = true
